--- a/section-digital.twig
+++ b/section-digital.twig
@@ -46,7 +46,7 @@
                             "mobile": {
                                 width: 235, height: 319
                             },
-                            "mobileLrg": {
+                            "mobileLarge": {
                                 width: 235, height: 319
                             },
                             "tablet": {
@@ -67,7 +67,7 @@
                             "mobile": {
                                 width: 235, height: 319
                             },
-                            "mobileLrg": {
+                            "mobileLarge": {
                                 width: 235, height: 319
                             },
                             "tablet": {
@@ -99,7 +99,7 @@
                                     "mobile": {
                                         width: 235, height: 319
                                     },
-                                    "mobileLrg": {
+                                    "mobileLarge": {
                                         width: 235, height: 319
                                     },
                                     "tablet": {
