--- a/partials/_single-article.twig
+++ b/partials/_single-article.twig
@@ -67,7 +67,7 @@
 
 {% set imgSizes = {
     "mobile"  : imageSizes is defined and imageSizes.mobile is defined  ? imageSizes.mobile  : {width:306, height:185},
-    "mobileLrg" : imageSizes is defined and imageSizes.mobileLarge is defined  ? imageSizes.mobileLarge  : {width:306, height:185},
+    "mobileLrg" : imageSizes is defined and imageSizes.mobileLrg is defined  ? imageSizes.mobileLrg  : {width:306, height:185},
     "tablet"  : imageSizes is defined and imageSizes.tablet is defined  ? imageSizes.tablet  : {width:500, height:768},
     "desktop" : imageSizes is defined and imageSizes.desktop is defined ? imageSizes.desktop : {width:imgWidth, height:imgHeight},
 } %}
