--- a/static/sass/components/_component.section.scss
+++ b/static/sass/components/_component.section.scss
@@ -15,6 +15,10 @@
         .card-5-desktop {
             height: 100%;
 
+            @media #{$mobile}, #{$tablet} {
+                height: inherit;
+            }
+
             .card-infoo {
                 height: 100%;
             }
