--- a/article.twig
+++ b/article.twig
@@ -363,7 +363,7 @@
 
                 <div class="row c-article__main-container">
                     <div class="col-12 col-lg-1">
-                        {% if config.hideShareIcons != 'true' %}
+                        {% if config.displayShareIcons == 'true' %}
                             <div class="u-generic-socialIcons u-generic-socialIcons--sticky u-generic-socialIcons-xs">
                                 <a class="u-generic-socialIcons__item"
                                     href="mailto:?subject=Check%20out%20this%20article&body={{article.url}}" target="_blank">
@@ -522,8 +522,9 @@
                                                 </div>
                                             </div>
                                             <hr />
+
                                             {% if showPaywall == false %}
-                                                {% if config.hideShareIcons != 'true' %}
+                                                {% if config.displayShareIcons == 'true' %}
                                                     <div class="u-generic-socialIcons mb-3 mb-xl-5 justify-content-end">
                                                         <div class="u-generic-socialIcons-text">Share article</div>
                                                         <a class="u-generic-socialIcons__item"
