--- a/static/sass/components/_component.article.scss
+++ b/static/sass/components/_component.article.scss
@@ -244,6 +244,10 @@
       }
     }
 
+    li {
+      margin-bottom: 10px !important;
+    }
+
     h1 {
       font-size: 32px !important;
       span,
