--- a/partials/_article-staff.twig
+++ b/partials/_article-staff.twig
@@ -6,8 +6,6 @@
 {% endif %}
 
 
-
-
 {% if params.hasMedia == 'True' %}
     <figure class="{{params.cardType}}c-cards-view__media {{params.videoClass}}" title="{{imageSize}}">
         <picture>
@@ -49,9 +47,11 @@
             <div class="{{params.cardType}}c-cards-view__container-categorisedInfo__box">
                 <h2 class="{{params.cardType}}c-cards-view__heading js-c-cards-view-heading j-truncate j-headline">{{ params.title }}</h2>
             </div>
-            <div class="{{params.cardType}}c-cards-view__category-wrap">
-                <div class="{{params.cardType}}c-cards-view__category">{{params.blogTitle}}</div>
-            </div> 
+            {% if params.additionalInfo.jobtitle is defined and params.additionalInfo.jobtitle is not empty %}
+                <div class="{{params.cardType}}c-cards-view__category-wrap">
+                    <div class="{{params.cardType}}c-cards-view__category">{{params.additionalInfo.jobtitle}}</div>
+                </div> 
+            {% endif %}
         </div>
 
         <p class="{{params.cardType}}c-cards-view__description js-c-cards-view-description j-truncate j-excerpt">{{ quotes.smarten(params.content | raw) }}</p>
