--- a/partials/_article-staff.twig
+++ b/partials/_article-staff.twig
@@ -57,7 +57,7 @@
         <p class="{{params.cardType}}c-cards-view__description js-c-cards-view-description j-truncate j-excerpt">{{ quotes.smarten(params.content | raw) }}</p>
         {% if params.additionalInfo.contactemail is defined and params.additionalInfo.contactemail is not empty %}
             <div class="classified_category">
-                <div class="classified_contactInfo">{{params.additionalInfo.contactemail}}</div>
+                <a href="mailto:{{params.additionalInfo.contactemail}}" class="classified_contactInfo">{{params.additionalInfo.contactemail}}</a>
             </div>
         {% endif %}
         {% if params.additionalInfo.contactphone is defined and params.additionalInfo.contactphone is not empty %}
