--- a/static/sass/components/_component.search.scss
+++ b/static/sass/components/_component.search.scss
@@ -68,6 +68,8 @@
         padding: 0 10px;
         outline: none;
         border: none;
+        min-width: 220px;
+        border-left: 1px solid #C0C0C0;
     }
 
     &_icon {
