hide search bar

--- a/layouts/partials/header/_header.twig
+++ b/layouts/partials/header/_header.twig
@@ -147,7 +147,7 @@
                             customClass: 'py-3'
                             }) | raw }}
                         </ul>
-                        <div class="c-searchWrapper">
+                        <div class="c-searchWrapper d-none">
                             <div class="c-searchWrapper_label js_mainSearchBox">
                                 <div class="c-searchWrapper_label_icon">
                                     <img src={{networkData.templatePath}}/static/icons/search.svg />
