--- a/layouts/partials/header/_header.twig
+++ b/layouts/partials/header/_header.twig
@@ -150,7 +150,7 @@
                         <div class="c-searchWrapper">
                             <div class="c-searchWrapper_label js_mainSearchBox">
                                 <div class="c-searchWrapper_label_icon">
-                                    <img src={{networkData.templatePath}}/static/icons/search.svg />
+                                    <img src={{networkData.templatePath}}/static/icons/search-grey.svg />
                                 </div>
                                 <div class="c-searchWrapper_label_text">Search</div>
                             </div>
