--- a/photosales.twig
+++ b/photosales.twig
@@ -26,7 +26,7 @@
 
 
 
-<main id="photo-sales" role="main" data-env="{{env}}"></main>
+<main id="photo-sales" class="u-margin-top-40" role="main" data-env="{{env}}"></main>
 
 <script>
     window.csrfToken    = "{{_AppHelper.getCsrfToken()}}";
