--- a/section-digital.twig
+++ b/section-digital.twig
@@ -145,6 +145,8 @@
             offset          : {{limit}},
             infinite        : true,
             limit           : 12,
+            imageWidth      : 600,
+            imageHeight     : 900,
             label           : "Load more",
             name            : 'section-load',
             blogid          : "{{ blogData['guid'] }}",
