--- a/partials/panels/section-01.twig
+++ b/partials/panels/section-01.twig
@@ -8,7 +8,7 @@
 {% set colorInverse = 'inverse' %}
 {% set inverseContainerClass = 'card-2-mobile card-2--noDescription card-2-tablet card-4-desktop c-cards--inverse' %}
 {% endif %}
-<div class="row" data-section="01">
+<div class="row panel-1" data-section="01">
     <div class="col-12">
         <div class="u-generic-topBorder {{colorInverse}}">
         </div>
