--- a/section-multi.twig
+++ b/section-multi.twig
@@ -26,12 +26,12 @@
 
 {% if config['active'] is not defined or config['active'] == true %}
 
-    {% if config['page']['news']['sections'] is defined %}
-        {% set panels = config['page']['news']['sections'] %}
+    {% if config['page']['multisection']['sections'] is defined %}
+        {% set panels = config['page']['multisection']['sections'] %}
     {% endif %}
 
-    {% if config['page']['news']['blogFeeds'] is defined %}
-        {% set blogFeeds = config['page']['news']['blogFeeds'] %}
+    {% if config['page']['multisection']['blogFeeds'] is defined %}
+        {% set blogFeeds = config['page']['multisection']['blogFeeds'] %}
     {% endif %}
 
     {% if config['inventory'][blogData.title]['bannerSpots'] is defined %}
