--- a/edit-profile.twig
+++ b/edit-profile.twig
@@ -434,7 +434,15 @@
                                     <div class="plan-features">
                                         <ul class="plan-features__row">
                                             {% for feature in description | split(";") %}
-                                                <li class="plan-features__item">{{ feature }}</li>
+                                                <li class="plan-features__item">
+                                                <span class="icon">
+                                                    <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                        <rect width="22" height="22" fill="none"/>
+                                                        <path d="M11 22C4.93513 22 0 17.0657 0 11C0 4.93429 4.93513 0 11 0C12.65 0 14.238 0.356673 15.7174 1.06072C16.3052 1.33963 16.5551 2.04286 16.2761 2.63133C15.9972 3.2198 15.2909 3.46894 14.7062 3.19C13.5442 2.6369 12.2965 2.35715 11 2.35715C6.23539 2.35715 2.3571 6.2346 2.3571 11C2.3571 15.7654 6.23539 19.6429 11 19.6429C15.7645 19.6429 19.6428 15.7654 19.6428 11C19.6428 9.83405 19.4142 8.70342 18.9663 7.64029C18.7133 7.04078 18.9938 6.34935 19.5925 6.09635C20.1927 5.84256 20.8834 6.12467 21.138 6.72337C21.7101 8.07874 22 9.51738 22 11C22 17.0657 17.0649 22 11 22L11 22Z" fill="#ffffff"  />
+                                                        <path d="M6.42314 8.55172L9.41117 15.5972C9.91321 16.7836 10.7375 16.7852 11.3126 15.6325C14.8758 8.46827 19.5178 3.47595 21.1018 1.88482C21.4058 1.57994 21.3398 1.48101 20.954 1.67268C14.4272 4.91297 10.5369 11.4116 10.5369 11.4116L9.04561 7.75872C8.88143 7.36037 8.41622 7.13956 8.00692 7.26454L6.86371 7.6087C6.45204 7.7336 6.25561 8.1547 6.42298 8.55148L6.42314 8.55172Z" fill="#ffffff" />
+                                                    </svg>
+                                                </span>
+                                                {{ feature }}</li>
                                             {% endfor %}
                                         </ul>
                                     </div>
