--- a/static/sass/pages/myaccount/_component.plan-features.scss
+++ b/static/sass/pages/myaccount/_component.plan-features.scss
@@ -22,7 +22,7 @@
         font-weight: $weightRegular;
         
 
-        &:before {
+        /* &:before {
           content: "";
           background-image: url('../icons/plan-tick.svg');
           background-repeat: no-repeat;
@@ -33,6 +33,16 @@
           height:22px;
           left: 0;
           top: 0;
+        } */
+
+        .icon {
+          position: absolute;
+          left: 0;
+          top: -2px;
+
+          svg, svg path, svg path * {
+              fill: $grey6;
+          }
         }
     }
 
