--- a/static/sass/components/_component.subscription.scss
+++ b/static/sass/components/_component.subscription.scss
@@ -148,7 +148,7 @@
                             top: -2px;
 
                             svg, svg path, svg path * {
-                                fill: var(--sec-color);
+                                fill: $grey6;
                             }
                         }
                     }
@@ -463,7 +463,7 @@
                         position: relative;
                         padding-left: 30px;
 
-                        &:before {
+                        /* &:before {
                             content: "\f05d";
                             font-family: $iconfont;
                             color: $grey4;
@@ -472,6 +472,16 @@
                             position: absolute;
                             left: 0;
                             top: -2px;
+                        } */
+
+                        .icon {
+                            position: absolute;
+                            left: 0;
+                            top: -2px;
+
+                            svg, svg path, svg path * {
+                                fill: $white;
+                            }
                         }
                     }
                 }
