add thank you template to events form

--- a/static/sass/_settings.variables.scss
+++ b/static/sass/_settings.variables.scss
@@ -34,6 +34,7 @@ $darkergrey: #979797;
 
 $greyish: #595859;
 $grey: #d8d8d8;
+$grey11: #f6f5f5;
 $grey2: #7f7f7f;
 $grey3: #f6f5f5;
 $grey4: #c0c0c0;
