--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -36,6 +36,7 @@
 @import "component.checkbox";
 @import "component.swap-modal";
 @import "component.error";
+@import "component.event-thanks";
 
 @import "component.article";
 @import "component.contact";
