--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -52,6 +52,7 @@
 @import "component.events";
 @import "component.event";
 @import "component.events-panel";
+@import "component.carousel-tray";
 
 //header
 @import "component.header";
