--- a/static/sass/utility/partials/_heading.scss
+++ b/static/sass/utility/partials/_heading.scss
@@ -78,7 +78,7 @@
 
         &:hover {
             background-color: var(--sec-color);
-            color: var(--white);
+            color: $white;
         }
     }
 
