change thread level for comments to 1

--- a/partials/_comments.twig
+++ b/partials/_comments.twig
@@ -28,6 +28,7 @@
     window.commentCount = "{{commentCount}}";
     window.allowComments = "{{allowComments}}";
     window.faqLink      = "{{faqLink}}";
+    window.threadLevel  = 1;
 </script>
 <div id="modal"></div>
 
