--- a/article.twig
+++ b/article.twig
@@ -607,7 +607,7 @@
 
 
 
-                                            <div id="comment-container" class="u-margin-top-80" data-env="{{env}}">
+                                            <div id="comment-container" class="u-margin-top-80 u-margin-bottom-40" data-env="{{env}}">
 
                                                 {# {% if commentCount == 0 and not show_comments %}
                                                     <p class="comments__closed">Some Newsroom articles are open to comments, <a href="#">click here</a> to learn more. </p>
