allow signed in users to comment

--- a/partials/_comments.twig
+++ b/partials/_comments.twig
@@ -29,6 +29,7 @@
     window.allowComments = "{{allowComments}}";
     window.faqLink      = "{{faqLink}}";
     window.threadLevel  = 1;
+    window.allow_signedin_users_to_comment = true;
 </script>
 <div id="modal"></div>
 
