--- a/layout-staff.twig
+++ b/layout-staff.twig
@@ -61,7 +61,7 @@
         <div class="acme-row">
             <div class="acme-col-12">
 
-                <div class="c-section-head mb-0">
+                <div class="c-section-head mb-0 acme-col-12">
                     <a class="what" href="{{blogData.url}}">
                         <h1 class="c-section-head__title">{{this.title}}</h1>
                     </a>
