add pijf tags to article page

--- a/article.twig
+++ b/article.twig
@@ -17,6 +17,18 @@
     {% set themeColor = networkData['styling']['colours']['primaryColor'] %}
 {% endif %}
 
+
+{# PIJF used in Google Tag Manager for NZ On Air to capture published data #}
+{% set pijf_code = null %}
+{% if article.additionalInfo is defined and article.additionalInfo.pijf is defined and article.additionalInfo.pijf != null %}
+    {% set pijf_code = article.additionalInfo.pijf %}
+{% endif %}
+
+{% if pijf_code %}
+    {% set register = _AppHelper.registerMetaTag({"name": "nzoa", "content": pijf_code}) %}
+{% endif %}
+
+
 {% set relatedArticles = [] %}
 {% set articleBlog = article.blog.title | lower %}
 
