--- a/static/sass/components/_component.advertisment.scss
+++ b/static/sass/components/_component.advertisment.scss
@@ -13,7 +13,7 @@
         }
     }
     &__banner{
-        &-head,&-1,&-2,&-3,&-4{
+        &-head,&-1,&-2,&-3,&-4,&-5,&-6,&-7,&-8,&-9{
             margin-top: 30px;
             @media #{$desktop-up}{
                 min-width: 728px;
